--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -6,7 +6,7 @@
 @theme inline {
   --color-background: var(--background);
   --color-foreground: var(--foreground);
-  --font-sans: var(--font-vend-sans);
+  --font-sans: var(--font-public-sans);
   --font-display: var(--font-funnel-display);
   --color-sidebar-ring: var(--sidebar-ring);
   --color-sidebar-border: var(--sidebar-border);
@@ -140,5 +140,9 @@
   h5,
   h6 {
     @apply font-display! font-bold;
+  }
+
+  button {
+    @apply cursor-pointer!;
   }
 }
